[package]
name = "kalypso_input_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libzeropool-zkbob = "1.3.0"
ethers = "2.0.10"
hex = "0.4.3"
derive_more = "0.99.17"