[package]
name = "kalypso_input_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libzeropool-zkbob = "1.3.0"
ethers = "2.0.10"
log = "0.4"
hex = "0.4.3"
derive_more = "0.99.17"
reqwest = "0.11.23"
ecies = {version = "0.2.6", features = ["std"]}
openssl = { version = "0.10", features = ["vendored"] }
flate2 = "1.0.28"
